# striczkof-io

./: .gitignore  Cargo.toml  Makefile  Makefile.in  README.md  build.rs  build.sh  testing.pub.cert
.github/workflows/: package.yml  release.yml  test.yml
end2end/: package-lock.json  package.json
packaging/development/archlinux/: PKGBUILD
packaging/development/freebsd/: Makefile
packaging/release/freebsd/: Makefile
services/freebsd/: striczkof-io  striczkof_io
services/systemd/: striczkof_io.service
src/: app.rs  config.rs  config_file.proto  listener.rs  main.rs  server.rs  sync.rs  tls.rs  utilities.rs  webpages.rs
src/config/: ini_file.rs
src/server/: web.rs
src/utilities/: error_handling.rs  logging.rs  metrics.rs  signalling.rs
src/webpages/: about.rs  index.rs  page_not_found.rs
templates/: about.stpl  index.stpl  page_not_found.stpl
web_assets/: index.stpl
