[package]
name = "striczkof-io"
version = "0.2.0"
authors = ["Alvin Peters <alvin@striczkof.io>"]
edition = "2021"
rust-version = "1.74.0"
repository = "https://github.com/striczkof/striczkof-io"
license = "AGPL-3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tls", "web", "https"]
tls = []
# Web server. Comes with HTTP by default.
web = []
https = ["web"]
## To enable HTTPS.
https_web = ["web", "tls"]
# Database stuff.
database = []

[dependencies]
tokio = {version = "1.37.0", features = ["full"]}
hyper = {version = "1.2.0", features = ["full"]}
http-body-util = "0.1.1"
rustls = "0.23.4"
tokio-rustls = "0.26"
rustls-pemfile = "2.1"
# Logging stuff
log = "0.4"
chrono = "0.4.37"
tokio-util = "0.7"
hyper-util = {version = "0.1", features = ["full"]}
# Config stuff
configparser = {version = "3.0", features = ["tokio"]}
## Database stuff


[dev-dependencies]
## Used for generating x509 certificate for testing.
rcgen = "0.12"
