[package]
name = "striczkof-io"
version = "0.1.1"
edition = "2021"
rust-version = "1.74.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.5", features = ["rustls-0_22"] }
actix-files = "0.6.5"
rustls = "0.22.4"
rustls-pemfile = "2.1.2"
ed25519-dalek = "2.1.1"
sailfish = "0.8"
getopts = "0.2"
serde = { version = "1.0.203", features = ["derive"] }
log = "0.4.21"
hex = "0.4.3"

[features]
compiled_tls = []